--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@vitejs/plugin-react": "^5.1.1",
     "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "postcss": "^8.5.6",
@@ -45,6 +48,7 @@
     "react-hook-form": "^7.66.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.2.1",
     "vite": "^7.2.2",
     "zod": "^4.1.12"
   },
